[tool.poetry]
name = "velociraptor"
version = "0.1.0"
description = "Velociraptor Environment for OpenAI gym"
authors = ["Martyn <martyn.smith560@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.7.3"
gym = "0.19"
numpy = "1.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
